2012-05-21 15:30  paddockd

	* [r335] ChangeLog, src/slimaudio/slimaudio.h,
	  src/squeezeslave/squeezeslave.c: Fix for TREMOR_DECODER compile
	  error.
	  Increased revision to 335.

2012-05-21 14:27  paddockd

	* [r334] ChangeLog, contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-mipsel-nofpu-oss,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  makefile.linux22-empeg, makefile.linux24-i586-display,
	  makefile.linux26-armel-alsa-display,
	  makefile.linux26-armel-display, makefile.windows-display,
	  src/slimaudio/slimaudio_decoder_vorbis.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c: Renamed
	  NO_FPU compile option to TREMOR_DECODER. The fixed point decoder
	  is not supported on big endian systems.
	  Increased revision to 334.

2012-05-21 14:00  paddockd

	* [r333] ChangeLog, makefile.windows-display,
	  src/squeezeslave/squeezeslave.c: Moved windows build to fixed
	  point tremor vorbis decoder.
	  Increased revision to 333.

2012-05-21 11:39  paddockd

	* [r332] ChangeLog, contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-mipsel-nofpu-oss,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  makefile.linux22-empeg, src/squeezeslave/squeezeslave.c: Updated
	  remaining nofpu builds to tremor-r18153 and libogg-1.2.2.
	  Increased revision to 332.

2012-05-20 21:27  paddockd

	* [r331] contrib/makefile.freebsd-i386,
	  contrib/makefile.freebsd-sparc64,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-alsa,
	  contrib/makefile.linux26-ffmpeg-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  contrib/makefile.linux26-ppc-alsa-display,
	  makefile.linux24-alsa-display, makefile.linux26-alsa-display,
	  makefile.linux26-armel-alsa-display,